XO_Project_UAT/Project--XOGrp--UAT/src/objects/Marketplace_Health__c.object
<CustomObject>
    <description>CSP-2618, It is used for storing the records from Business monthly provided.</description>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipName>Marketplace_Saleabilitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <description>Used to map to Leads and Accounts 
Combination rules: Zip code + Category Code</description>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Marketplace_Health__c</fullName>
        <description>Values for setting to Leads and Accounts</description>
        <inlineHelpText>Indicates traffic health
Excellent: Sustains many new vendors. Proactive sale
Good: Sustains some new vendors. Proactive sale
Balanced: Sustains paid vendors. Reactive sale
Minimal: Cannot sustain paid vendors.Reactive sale
Unknown: Insufficient data</inlineHelpText>
        <label>Marketplace Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <label>Minimal</label>
                </value>
                <value>
                    <fullName>Orange</fullName>
                    <label>Balanced</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                    <label>Excellent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to determine the record whether is expired or still in used. Expired means soft delete the record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Used</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip</label>
        <referenceTo>Zip__c</referenceTo>
        <relationshipName>Marketplace_Saleabilitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Marketplace Health</label>
    <listViews>
        <fullName>All_MS</fullName>
        <columns>NAME</columns>
        <columns>Zip__c</columns>
        <columns>Category__c</columns>
        <columns>Marketplace_Health__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_MS</label>
    </listViews>
    <listViews>
        <fullName>Martetplcae_Salebilitys_Test</fullName>
        <columns>NAME</columns>
        <columns>Zip__c</columns>
        <columns>Category__c</columns>
        <columns>Marketplace_Health__c</columns>
        <columns>External_Key__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zip__c</field>
            <operation>equals</operation>
            <value>65102</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Registry Services - REG</value>
        </filters>
        <label>Martetplcae_Salebilitys_Test</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{00000000}</displayFormat>
        <label>Marketplace Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketplace Healths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>